--- a/index.html
+++ b/index.html
@@ -5,27 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elisha's Portfolio</title>
-    <link href="bootstrap-5.1.3-dist/css/bootstrap-grid.min.css" rel="stylesheet">
-    <link href="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" rel="stylesheet">
+    <link href="bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-blue bs-blue">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Elisha</a>
+  <main class="container-fluid ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <div class="container-fluid bg-primary ">
+          <a class="navbar-brand text-white" href="#">Elisha</a>
         </div>
         <div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="text-end">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="#">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active text-white" href="#">About</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
+                    <a class="nav-link active text-white">Contact</a>
+                  </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="container-fluid  text-center">
+      <h1 class="mt-5">Elisha Tetteyfio</h1>
+      <h2 class="mt-3">Software Developer</h2>
+      <p class="mx-auto mt-5">
+        I can help you build a product, feature or website. Look through some of my works
+        and experiences! If you like what you see and have a project you need coded, don't hesitate to contact me.
+      </p>
+    </div>
+    <hr class="mt5">
+  </main>
 </body>
 </html>
