Modified the index.html file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,37 @@
         and experiences! If you like what you see and have a project you need coded, don't hesitate to contact me.
       </p>
     </div>
-    <hr class="mt5">
+    <hr class=" mx-auto mt-5">
+    <div class="container mt-5 mx-auto">
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>Languages</h3>
+            <p>Javascript</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>Python</p>
+            <p>Java</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>Frameworks</h3>
+            <p>Bootstrap</p>
+            <p>Ruby on Rails</p>
+            <p>RSPec</p>
+            <p>Capybara</p>
+            <p>Selenuim</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>Skills</h3>        
+            <p>Github</p>
+            <p>Codepen</p>
+            <p>Gitlab</p>
+            <p>Terminal</p>
+            <p>CodeKit</p>
+          </div>
+        </div>
+    </div>
+    <hr class=" mx-auto mt-5">
+      
   </main>
 </body>
 </html>
