Working on about section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main class="container-fluid ">
+  <main class="container-fluid bg-primary">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid bg-primary ">
           <a class="navbar-brand text-white" href="#">Elisha</a>
@@ -31,9 +31,9 @@
         </div>
     </nav>
     <div class="container-fluid  text-center">
-      <h1 class="mt-5">Elisha Tetteyfio</h1>
-      <h2 class="mt-3">Software Developer</h2>
-      <p class="mx-auto mt-5">
+      <h1 class="mt-5 text-white">Elisha Tetteyfio</h1>
+      <h2 class="mt-3 text-white">Software Developer</h2>
+      <p class="mx-auto mt-5 text-white">
         I can help you build a product, feature or website. Look through some of my works
         and experiences! If you like what you see and have a project you need coded, don't hesitate to contact me.
       </p>
@@ -41,7 +41,7 @@
     <hr class=" mx-auto mt-5">
     <div class="container mt-5 mx-auto">
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 text-white">
             <h3>Languages</h3>
             <p>Javascript</p>
             <p>HTML</p>
@@ -49,7 +49,7 @@
             <p>Python</p>
             <p>Java</p>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 text-white">
             <h3>Frameworks</h3>
             <p>Bootstrap</p>
             <p>Ruby on Rails</p>
@@ -57,7 +57,7 @@
             <p>Capybara</p>
             <p>Selenuim</p>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 text-white">
             <h3>Skills</h3>        
             <p>Github</p>
             <p>Codepen</p>
@@ -68,7 +68,50 @@
         </div>
     </div>
     <hr class=" mx-auto mt-5">
-      
+    <div class="container mt-5 ">
+        <div class="row">
+    <div class="col-sm-2">
+        <p class="text-white">Work</p>
+    </div>
+    <div class="col-sm-1 ms-0">
+       <img src="Icons/downArrow.svg" alt="drown arrow" />
+    </div>
+    <div class="col-sm-2 ms-5">
+        <ul class="Icons">
+            <div class="container1">
+                <div class="row">
+            <li class="col-sm-1">
+                <a href="#" target="blank"><img src="Icons/linkedin.svg"
+                        alt="twitter icon" /></a>
+            </li>
+            <li class="col-sm-1">
+                <a href="#" target="blank"><img src="Icons/twitter.svg"
+                    alt="Linkedin icon" /></a>
+            </li>
+            <li class="col-sm-1">
+                <a href="#" target="blank"><img src="Icons/git.svg"
+                        alt="meduim icon" /></a>
+            </li>
+            <li  class="col-sm-1">
+                <a href="#" target="blank"><img src="Icons/Disabled.svg"
+                        alt="github icon" /></a>
+            </li>
+            <li  class="col-sm-1">
+                <a href="#" target="blank"><img src="Icons/Enabled.svg"
+                        alt="angellist icon" /></a>
+            </li>
+        </ul>
+    </div>
+        </div>
+    </div>
+    <div class="col-sm-1 ms-0">
+        <img src="Icons/downArrow.svg" alt="drown arrow" />
+     </div>
+    <div class="col-sm-2">
+        <p class="text-white">Work</p>
+    </div>
+</div>
+</div>
   </main>
 </body>
 </html>
