--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,110 +9,127 @@
     <link href="bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <main class="container-fluid bg-primary">
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <div class="container-fluid bg-primary ">
-          <a class="navbar-brand text-white" href="#">Elisha</a>
+    <main class="container-fluid bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <div class="container-fluid bg-primary ">
+                <a class="navbar-brand text-white" href="#">Elisha</a>
+            </div>
+            <div>
+                <div class="text-end">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active text-white">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container-fluid  text-center">
+            <h1 class="mt-5 text-white">Elisha Tetteyfio</h1>
+            <h2 class="mt-3 text-white">Software Developer</h2>
+            <p class="mx-auto mt-5 text-white">
+                I can help you build a product, feature or website. Look through some of my works
+                and experiences! If you like what you see and have a project you need coded, don't hesitate to contact
+                me.
+            </p>
         </div>
-        <div>
-            <div class="text-end">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" href="#">About</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active text-white">Contact</a>
-                  </li>
-                </ul>
+        <hr class=" mx-auto mt-5">
+        <div class="container mt-5 mx-auto">
+            <div class="row">
+                <div class="col-sm-4 text-white">
+                    <h3>Languages</h3>
+                    <p>Javascript</p>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>Python</p>
+                    <p>Java</p>
+                </div>
+                <div class="col-sm-4 text-white">
+                    <h3>Frameworks</h3>
+                    <p>Bootstrap</p>
+                    <p>Ruby on Rails</p>
+                    <p>RSPec</p>
+                    <p>Capybara</p>
+                    <p>Selenuim</p>
+                </div>
+                <div class="col-sm-4 text-white">
+                    <h3>Skills</h3>
+                    <p>Github</p>
+                    <p>Codepen</p>
+                    <p>Gitlab</p>
+                    <p>Terminal</p>
+                    <p>CodeKit</p>
+                </div>
             </div>
         </div>
-    </nav>
-    <div class="container-fluid  text-center">
-      <h1 class="mt-5 text-white">Elisha Tetteyfio</h1>
-      <h2 class="mt-3 text-white">Software Developer</h2>
-      <p class="mx-auto mt-5 text-white">
-        I can help you build a product, feature or website. Look through some of my works
-        and experiences! If you like what you see and have a project you need coded, don't hesitate to contact me.
-      </p>
-    </div>
-    <hr class=" mx-auto mt-5">
-    <div class="container mt-5 mx-auto">
-        <div class="row">
-          <div class="col-sm-4 text-white">
-            <h3>Languages</h3>
-            <p>Javascript</p>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>Python</p>
-            <p>Java</p>
-          </div>
-          <div class="col-sm-4 text-white">
-            <h3>Frameworks</h3>
-            <p>Bootstrap</p>
-            <p>Ruby on Rails</p>
-            <p>RSPec</p>
-            <p>Capybara</p>
-            <p>Selenuim</p>
-          </div>
-          <div class="col-sm-4 text-white">
-            <h3>Skills</h3>        
-            <p>Github</p>
-            <p>Codepen</p>
-            <p>Gitlab</p>
-            <p>Terminal</p>
-            <p>CodeKit</p>
-          </div>
+        <hr class=" mx-auto mt-5">
+        <div class="container mt-5 ">
+            <div class="row">
+                <div class="col-sm-2">
+                    <p class="text-white">Work</p>
+                </div>
+                <div class="col-sm-1 ms-0">
+                    <img src="Icons/downArrow.svg" alt="drown arrow" />
+                </div>
+                <div class="col-sm-2 ms-5">
+                    <ul class="Icons">
+                        <div class="container1">
+                            <div class="row">
+                                <li class="col-sm-1">
+                                    <a href="#" target="blank"><img src="Icons/linkedin.svg" alt="twitter icon" /></a>
+                                </li>
+                                <li class="col-sm-1">
+                                    <a href="#" target="blank"><img src="Icons/twitter.svg" alt="Linkedin icon" /></a>
+                                </li>
+                                <li class="col-sm-1">
+                                    <a href="#" target="blank"><img src="Icons/git.svg" alt="meduim icon" /></a>
+                                </li>
+                                <li class="col-sm-1">
+                                    <a href="#" target="blank"><img src="Icons/Disabled.svg" alt="github icon" /></a>
+                                </li>
+                                <li class="col-sm-1">
+                                    <a href="#" target="blank"><img src="Icons/Enabled.svg" alt="angellist icon" /></a>
+                                </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
-    <hr class=" mx-auto mt-5">
-    <div class="container mt-5 ">
-        <div class="row">
-    <div class="col-sm-2">
-        <p class="text-white">Work</p>
-    </div>
-    <div class="col-sm-1 ms-0">
-       <img src="Icons/downArrow.svg" alt="drown arrow" />
-    </div>
-    <div class="col-sm-2 ms-5">
-        <ul class="Icons">
-            <div class="container1">
-                <div class="row">
-            <li class="col-sm-1">
-                <a href="#" target="blank"><img src="Icons/linkedin.svg"
-                        alt="twitter icon" /></a>
-            </li>
-            <li class="col-sm-1">
-                <a href="#" target="blank"><img src="Icons/twitter.svg"
-                    alt="Linkedin icon" /></a>
-            </li>
-            <li class="col-sm-1">
-                <a href="#" target="blank"><img src="Icons/git.svg"
-                        alt="meduim icon" /></a>
-            </li>
-            <li  class="col-sm-1">
-                <a href="#" target="blank"><img src="Icons/Disabled.svg"
-                        alt="github icon" /></a>
-            </li>
-            <li  class="col-sm-1">
-                <a href="#" target="blank"><img src="Icons/Enabled.svg"
-                        alt="angellist icon" /></a>
-            </li>
-        </ul>
-    </div>
+        <div class="col-sm-1 ms-0">
+            <img src="Icons/downArrow.svg" alt="drown arrow" />
         </div>
-    </div>
-    <div class="col-sm-1 ms-0">
-        <img src="Icons/downArrow.svg" alt="drown arrow" />
-     </div>
-    <div class="col-sm-2">
-        <p class="text-white">Work</p>
-    </div>
-</div>
-</div>
-  </main>
+        <div class="col-sm-2">
+            <p class="text-white">Work</p>
+        </div>
+        </div>
+        </div>
+        <div>
+            <h2 class="text-uppercase text-white ps-5">My Recent Projects</h2>
+        </div>
+        <hr class="ps-5">
+        <div class="card mb-3 ps-5">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Personal project</h5>
+                        <p class="card-text">This is a project with CSS. In this project, I created a replica of this
+                            webpage. Feel free to checkout the link and compare it with the final work.</p>
+                            <a href="#" class="btn btn-primary">See Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
