Added 'projects' segment

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                 <li class="col-sm-1">
                                     <a href="#" target="blank"><img src="Icons/Enabled.svg" alt="angellist icon" /></a>
                                 </li>
+                              </div>
                     </ul>
                 </div>
             </div>
@@ -114,21 +115,86 @@
             <h2 class="text-uppercase text-white ps-5">My Recent Projects</h2>
         </div>
         <hr class="ps-5">
-        <div class="card mb-3 ps-5">
-            <div class="row g-0">
+        <div class="mb-3 mx-auto" id="c1">
+            <div class="row g-0 bg-primary">
                 <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="work.png" class="img-fluid img1" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Personal project</h5>
-                        <p class="card-text">This is a project with CSS. In this project, I created a replica of this
+                        <h5 class="card-title text-white">Personal project</h5>
+                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
                             webpage. Feel free to checkout the link and compare it with the final work.</p>
-                            <a href="#" class="btn btn-primary">See Project</a>
+                        <div>
+                          <ul class="row text-white">
+                            <li class="col-sm-1 lang">html</li>
+                             <li class="col-sm-1 lang">css</li>
+                          </ul>
+                        </div>
+                        <a href="#" class="btn btn-success">See Project</a>
                     </div>
                 </div>
             </div>
+            <div class="row g-0 bg-primary mt-5">
+              <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Personal project</h5>
+                    <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
+                        webpage. Feel free to checkout the link and compare it with the final work.</p>
+                    <div>
+                      <ul class="row text-white">
+                        <li class="col-sm-1 lang">html</li>
+                         <li class="col-sm-1 lang">css</li>
+                      </ul>
+                    </div>
+                    <a href="#" class="btn btn-success">See Project</a>
+                </div>
+            </div>
+              <div class="col-md-4">
+                  <img src="work.png" class="img-fluid img1" alt="...">
+              </div>
+          </div>
+          <div class="row g-0 bg-primary">
+            <div class="col-md-4">
+                <img src="work.png" class="img-fluid img1" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Personal project</h5>
+                    <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
+                        webpage. Feel free to checkout the link and compare it with the final work.</p>
+                    <div>
+                      <ul class="row text-white">
+                        <li class="col-sm-1 lang">html</li>
+                         <li class="col-sm-1 lang">css</li>
+                      </ul>
+                    </div>
+                    <a href="#" class="btn btn-success">See Project</a>
+                </div>
+            </div>
         </div>
+        <div class="row g-0 bg-primary mt-5">
+          <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title text-white">Personal project</h5>
+                <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
+                    webpage. Feel free to checkout the link and compare it with the final work.</p>
+                <div>
+                  <ul class="row text-white">
+                    <li class="col-sm-1 lang">html</li>
+                     <li class="col-sm-1 lang">css</li>
+                  </ul>
+                </div>
+                <a href="#" class="btn btn-success">See Project</a>
+            </div>
+        </div>
+          <div class="col-md-4">
+              <img src="work.png" class="img-fluid img1" alt="...">
+          </div>
+      </div>
+    </div>
+
+
     </main>
 </body>
 
