Add contact section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <li class="col-sm-1">
                                     <a href="#" target="blank"><img src="Icons/Enabled.svg" alt="angellist icon" /></a>
                                 </li>
-                              </div>
+                            </div>
                     </ul>
                 </div>
             </div>
@@ -123,76 +123,107 @@
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title text-white">Personal project</h5>
-                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
+                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+                            of this
                             webpage. Feel free to checkout the link and compare it with the final work.</p>
                         <div>
-                          <ul class="row text-white">
-                            <li class="col-sm-1 lang">html</li>
-                             <li class="col-sm-1 lang">css</li>
-                          </ul>
+                            <ul class="row text-white">
+                                <li class="col-sm-1 lang">html</li>
+                                <li class="col-sm-1 lang">css</li>
+                            </ul>
                         </div>
                         <a href="#" class="btn btn-success">See Project</a>
                     </div>
                 </div>
             </div>
             <div class="row g-0 bg-primary mt-5">
-              <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title text-white">Personal project</h5>
-                    <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
-                        webpage. Feel free to checkout the link and compare it with the final work.</p>
-                    <div>
-                      <ul class="row text-white">
-                        <li class="col-sm-1 lang">html</li>
-                         <li class="col-sm-1 lang">css</li>
-                      </ul>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">Personal project</h5>
+                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+                            of this
+                            webpage. Feel free to checkout the link and compare it with the final work.</p>
+                        <div>
+                            <ul class="row text-white">
+                                <li class="col-sm-1 lang">html</li>
+                                <li class="col-sm-1 lang">css</li>
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-success">See Project</a>
                     </div>
-                    <a href="#" class="btn btn-success">See Project</a>
+                </div>
+                <div class="col-md-4">
+                    <img src="work.png" class="img-fluid img1" alt="...">
                 </div>
             </div>
-              <div class="col-md-4">
-                  <img src="work.png" class="img-fluid img1" alt="...">
-              </div>
-          </div>
-          <div class="row g-0 bg-primary">
-            <div class="col-md-4">
-                <img src="work.png" class="img-fluid img1" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title text-white">Personal project</h5>
-                    <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
-                        webpage. Feel free to checkout the link and compare it with the final work.</p>
-                    <div>
-                      <ul class="row text-white">
-                        <li class="col-sm-1 lang">html</li>
-                         <li class="col-sm-1 lang">css</li>
-                      </ul>
+            <div class="row g-0 bg-primary">
+                <div class="col-md-4">
+                    <img src="work.png" class="img-fluid img1" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">Personal project</h5>
+                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+                            of this
+                            webpage. Feel free to checkout the link and compare it with the final work.</p>
+                        <div>
+                            <ul class="row text-white">
+                                <li class="col-sm-1 lang">html</li>
+                                <li class="col-sm-1 lang">css</li>
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-success">See Project</a>
                     </div>
-                    <a href="#" class="btn btn-success">See Project</a>
+                </div>
+            </div>
+            <div class="row g-0 bg-primary mt-5">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">Personal project</h5>
+                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+                            of this
+                            webpage. Feel free to checkout the link and compare it with the final work.</p>
+                        <div>
+                            <ul class="row text-white">
+                                <li class="col-sm-1 lang">html</li>
+                                <li class="col-sm-1 lang">css</li>
+                            </ul>
+                        </div>
+                        <a href="#" class="btn btn-success">See Project</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="work.png" class="img-fluid img1" alt="...">
                 </div>
             </div>
         </div>
-        <div class="row g-0 bg-primary mt-5">
-          <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title text-white">Personal project</h5>
-                <p class="card-text text-white">This is a project with CSS. In this project, I created a replica of this
-                    webpage. Feel free to checkout the link and compare it with the final work.</p>
-                <div>
-                  <ul class="row text-white">
-                    <li class="col-sm-1 lang">html</li>
-                     <li class="col-sm-1 lang">css</li>
-                  </ul>
-                </div>
-                <a href="#" class="btn btn-success">See Project</a>
-            </div>
+        <div>
+            <h3 class=" mx-auto  ps-5 mt-5 text-white text-center">Let's Chat</h3>
+            <p class="mx-auto mt-5 text-white text-center">
+                If you have an application you are interested in developing, a feature that you need built or a project
+                that needs coding. I’d love to help with it
+            </p>
         </div>
-          <div class="col-md-4">
-              <img src="work.png" class="img-fluid img1" alt="...">
-          </div>
-      </div>
-    </div>
+        <div>
+            <form>
+                <div class="mb-3 mx-auto">
+                  <label for="exampleInputEmail1" class="form-label text-white">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3 mx-auto">
+                  <label for="exampleInputPassword1" class="form-label text-white">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check mx-auto">
+                    <label class="label" id="input-message" for="messag"></label>
+                    <textarea class="input_msg" name="message" id="messag" maxlength="500" cols="20" rows="10"
+                        placeholder="Write your message here" required></textarea>
+                </div>
+                <div class="mx-auto ps-5">
+                <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+              </form>
+        </div>
 
 
     </main>
