--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
     <link href="bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <main class="container-fluid bg-primary">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
@@ -71,71 +69,113 @@
             </div>
         </div>
         <hr class=" mx-auto mt-5">
-        <div class="container mt-5 ">
-            <div class="row">
-                <div class="col-sm-2">
-                    <p class="text-white">Work</p>
-                </div>
-                <div class="col-sm-1 ms-0">
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="container">
+                <div class="row ">
+                  <p class="text-white col-sm-2">Work</p>
+                  <div class="col-sm-1 ms-0">
                     <img src="Icons/downArrow.svg" alt="drown arrow" />
+                  </div>
                 </div>
-                <div class="col-sm-2 ms-5">
-                    <ul class="Icons">
-                        <div class="container1">
-                            <div class="row">
-                                <li class="col-sm-1">
-                                    <a href="#" target="blank"><img src="Icons/linkedin.svg" alt="twitter icon" /></a>
-                                </li>
-                                <li class="col-sm-1">
-                                    <a href="#" target="blank"><img src="Icons/twitter.svg" alt="Linkedin icon" /></a>
-                                </li>
-                                <li class="col-sm-1">
-                                    <a href="#" target="blank"><img src="Icons/git.svg" alt="meduim icon" /></a>
-                                </li>
-                                <li class="col-sm-1">
-                                    <a href="#" target="blank"><img src="Icons/Disabled.svg" alt="github icon" /></a>
-                                </li>
-                                <li class="col-sm-1">
-                                    <a href="#" target="blank"><img src="Icons/Enabled.svg" alt="angellist icon" /></a>
-                                </li>
-                            </div>
-                    </ul>
-                </div>
+              </div>
             </div>
-        </div>
-        <div class="col-sm-1 ms-0">
-            <img src="Icons/downArrow.svg" alt="drown arrow" />
-        </div>
-        <div class="col-sm-2">
-            <p class="text-white">Work</p>
-        </div>
-        </div>
-        </div>
-        <div>
-            <h2 class="text-uppercase text-white ps-5">My Recent Projects</h2>
-        </div>
-        <hr class="ps-5">
-        <div class="mb-3 mx-auto" id="c1">
-            <div class="row g-0 bg-primary">
-                <div class="col-md-4">
-                    <img src="work.png" class="img-fluid img1" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title text-white">Personal project</h5>
-                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
-                            of this
-                            webpage. Feel free to checkout the link and compare it with the final work.</p>
-                        <div>
-                            <ul class="row text-white">
-                                <li class="col-sm-1 lang">html</li>
-                                <li class="col-sm-1 lang">css</li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn btn-success">See Project</a>
-                    </div>
-                </div>
+            <div class="col-sm-5">
+              <div class="container">
+                <ul class="row">
+                  <li class="col-sm-1">
+                    <a href="#" target="blank"><img src="Icons/linkedin.svg" alt="twitter icon" /></a>
+                  </li>
+                  <li class="col-sm-1">
+                    <a href="#" target="blank"><img src="Icons/twitter.svg" alt="Linkedin icon" /></a>
+                  </li>
+                  <li class="col-sm-1">
+                    <a href="#" target="blank"><img src="Icons/git.svg" alt="meduim icon" /></a>
+                  </li>
+                  <li class="col-sm-1">
+                    <a href="#" target="blank"><img src="Icons/Disabled.svg" alt="github icon" /></a>
+                  </li>
+                  <li class="col-sm-1">
+                    <a href="#" target="blank"><img src="Icons/Enabled.svg" alt="angellist icon" /></a>
+                  </li>
+                </ul>
+              </div>
             </div>
+            <div class="col-sm-2">
+              <div class="container">
+              <div class="row ">
+                <div class="col-sm-2 ms-0">
+                  <img src="Icons/downArrow.svg" alt="drown arrow" />
+                </div>
+                <p class="text-white col-sm-2">Work</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <h2 class="text-uppercase text-white ps-5">My Recent Projects</h2>
+      </div>
+      <hr class="ps-5">
+      <div class="mb-3 mx-auto" id="c1">
+        <div class="row g-0 bg-primary">
+          <div class="col-md-4">
+            <img src="work.png" class="img-fluid img1" alt="Project image">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-white">Personal project</h5>
+              <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+              of this webpage. Feel free to checkout the link and compare it with the final work.</p>
+            <div>
+            <ul class="row text-white">
+              <li class="col-sm-1 lang">html</li>
+              <li class="col-sm-1 lang">css</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-success">See Project</a>
+        </div>
+      </div>
+    </div>
+    <div class="row g-0 bg-primary mt-5">
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title text-white">Personal project</h5>
+          <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+            of this webpage. Feel free to checkout the link and compare it with the final work.</p>
+          <div>
+            <ul class="row text-white">
+              <li class="col-sm-1 lang">html</li>
+              <li class="col-sm-1 lang">css</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-success">See Project</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <img src="work.png" class="img-fluid img1" alt="Project image">
+      </div>
+    </div>
+    <div class="row g-0 bg-primary">
+      <div class="col-md-4">
+        <img src="work.png" class="img-fluid img1" alt="Project image">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title text-white">Personal project</h5>
+          <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
+          of this webpage. Feel free to checkout the link and compare it with the final work.</p>
+          <div>
+            <ul class="row text-white">
+              <li class="col-sm-1 lang">html</li>
+              <li class="col-sm-1 lang">css</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-success">See Project</a>
+        </div>
+      </div>
+    </div>
             <div class="row g-0 bg-primary mt-5">
                 <div class="col-md-8">
                     <div class="card-body">
@@ -153,47 +193,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="work.png" class="img-fluid img1" alt="...">
-                </div>
-            </div>
-            <div class="row g-0 bg-primary">
-                <div class="col-md-4">
-                    <img src="work.png" class="img-fluid img1" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title text-white">Personal project</h5>
-                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
-                            of this
-                            webpage. Feel free to checkout the link and compare it with the final work.</p>
-                        <div>
-                            <ul class="row text-white">
-                                <li class="col-sm-1 lang">html</li>
-                                <li class="col-sm-1 lang">css</li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn btn-success">See Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-0 bg-primary mt-5">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title text-white">Personal project</h5>
-                        <p class="card-text text-white">This is a project with CSS. In this project, I created a replica
-                            of this
-                            webpage. Feel free to checkout the link and compare it with the final work.</p>
-                        <div>
-                            <ul class="row text-white">
-                                <li class="col-sm-1 lang">html</li>
-                                <li class="col-sm-1 lang">css</li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn btn-success">See Project</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <img src="work.png" class="img-fluid img1" alt="...">
+                    <img src="work.png" class="img-fluid img1" alt="Project image">
                 </div>
             </div>
         </div>
@@ -201,22 +201,22 @@
             <h3 class=" mx-auto  ps-5 mt-5 text-white text-center">Let's Chat</h3>
             <p class="mx-auto mt-5 text-white text-center">
                 If you have an application you are interested in developing, a feature that you need built or a project
-                that needs coding. I’d love to help with it
+                that needs coding. I'd love to help with it
             </p>
         </div>
         <div>
             <form>
                 <div class="mb-3 mx-auto">
                   <label for="exampleInputEmail1" class="form-label text-white">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control mb-3 mx-auto" id="exampleInputEmail1" >
                 </div>
                 <div class="mb-3 mx-auto">
                   <label for="exampleInputPassword1" class="form-label text-white">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <div class="mb-3 form-check mx-auto">
-                    <label class="label" id="input-message" for="messag"></label>
-                    <textarea class="input_msg" name="message" id="messag" maxlength="500" cols="20" rows="10"
+                <div class="mb-3 mx-auto">
+                    <label class="label text-white" id="input-message" for="messag">Enter your message</label>
+                    <textarea class="input_msg" name="message" id="messag" maxlength="500" cols="60" rows="10"
                         placeholder="Write your message here" required></textarea>
                 </div>
                 <div class="mx-auto ps-5">
@@ -224,9 +224,6 @@
                 </div>
               </form>
         </div>
-
-
     </main>
 </body>
-
 </html>
